# siwei-note

./: .gitignore  Cargo.toml  README.md  env.toml.example
src/: command.rs  config.rs  main.rs
src/sdk/: auth.rs  const_var.rs  error.rs  mod.rs  note.rs  note_store.rs  notebook.rs  request.rs  userinfo.rs
src/sdk/enml/: mod.rs  plain_text_to_enml_converter.rs
