[package]
name = "siwei-note"
version = "0.1.0"
authors = ["suhanyu"]
edition = "2018"

[[bin]]
name = "server"
path = "bin/server.rs"
test = false
bench = false

[[bin]]
name = "main"
path = "src/main.rs"
test = false
bench = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version="0.11.3", feature=["blocking"]}
tokio = "1.5.0"
tokio-test = "0.4.1"
http = "0.2.4"
clap = "2.33.3"
toml = "0.5"
serde_derive = "1.0.125"
serde = "1.0.125"
actix-web = "3.3.2"
